Update content of projects and experience

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -41,7 +41,8 @@
     \item Identified, organised \& triaged issues \& reviewed PRs.
     \item Onboarded \& mentored new open source contributors.
     \item Coordinated, nurtured \& grew the FOSS community.
-    \item Managed the \href{https://twitter.com/cc_opensource}{official Twitter}, increasing subscribers by 20\%.
+    \item Maintained the \href{https://github.com/creativecommons/creativecommons.github.io-source/}{open-source site} and \href{https://github.com/creativecommons/ccos-scripts/}{automation workflows}.
+    \item Increased reach \& engagement of the \href{https://twitter.com/cc_opensource}{official Twitter} handle.
   \end{itemize}
 \end{sectiondescription}
 
@@ -80,7 +81,7 @@
 
 \begin{sectiondescription}
   \begin{itemize}[nosep, leftmargin = *]
-    \item Conceived, designed \& developed Vocabulary from scratch.
+    \item Conceived, designed \& developed \href{https://opensource.creativecommons.org/vocabulary/}{Vocabulary} from scratch.
     \item Initiated \& supported Vocabulary integration with CC sites.
   \end{itemize}
 \end{sectiondescription}
@@ -147,12 +148,12 @@
 \begin{sectiondescription}
   \begin{itemize}[nosep, leftmargin = *]
     \item Pivoted IMG as a group from app to platform development.
-    \item Upgraded the legacy portal, stack and apps, with Omniport.
+    \item Upgraded the legacy portal, tech stack \& apps to \href{https://omniport.readthedocs.io/}{Omniport}.
     \item Containerised, decoupled \& stabilised dev processes.
     \item Halved timelines by revamping the development paradigm.
     \item Mentored a team of over 50 developers and designers.
-    \item Fostered OSS culture with a record 30 repos open-sourced.
+    \item Fostered \href{https://github.com/IMGIITRoorkee/}{OSS culture} by open-sourcing 40+ repos.
     \item Led IMG to 10 and 13 GSoC selections in 2018 and 2019.
-    \item Reinvigorated IMG's popular image on various social media.
+    \item Reinvigorated IMG's popular image on various \href{https://facebook.com/IMGIITRoorkee}{social media}.
   \end{itemize}
 \end{sectiondescription}
