--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -109,14 +109,14 @@
 
 \projectsubsubsection
   {\href{https://github.com/dhruvkb/portfolio/}{Personal website}}
-  {JavaScript (Sass; Vue)}
+  {JavaScript (Sass; Vue); TypeScript}
 
 \begin{sectiondescription}
   \begin{itemize}[nosep, leftmargin = *]
-    \item Revamped online portfolio to use the modern JAMStack.
+    \item Rebuilt online portfolio on the principles of JAMStack.
     \item Integrated a highly functional `terminal emulator'-emulator.
-    \item Utilised the Solarized theme with both light \& dark modes.
-    \item Hosted a \href{https://dhruvkb.github.io/#/blog}{blog} with GitHub APIs \& serverless functions.
+    \item Deployed as a static site \& progressive web application.
+    \item Hosted a \href{https://dhruvkb.github.io/#/blog}{blog} with GitHub APIs \& TS serverless functions.
   \end{itemize}
 \end{sectiondescription}
 
