Add Swift to skills

--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -3,8 +3,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{sectiondescription}
-  Java (+Swing, JavaFX, Ant, Android),
+  Java (+Swing, JavaFX, Android),
   Kotlin (+Android)
-  Ruby (+Rails), Golang,
-  C++, FORTRAN, PHP \textit{and, of course,} Bash
+  Ruby (+Rails),
+  Swift (+SwiftUI),
+  Golang, Rust, C++,
+  PHP
+  \& Bash
 \end{sectiondescription}
