Improve textual content

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -17,9 +17,11 @@
 
 \begin{sectiondescription}
   \begin{itemize}[nosep, leftmargin = *]
+    \item Identified \& fixed issues tantamount to a GDPR breach.
+    \item Built audit logs to prevent, detect \& alert for breaches.
     \item Integrated all email providers with the Central Email System.
     \item Created system to track \& visualise email engagement.
-    \item Built audit logs to prevent \& detect compliance breaches.
+    \item Set up systems to improve email deliverability \& reputation.
   \end{itemize}
 \end{sectiondescription}
 
@@ -60,18 +62,6 @@
       \item \href{https://outreachy.org/}{Outreachy} summer iteration \hfill \textcolor{secondary}{\timeperiod[Aug 2020]{May}}
       \item \href{https://outreachy.org/}{Outreachy} winter iteration \hfill \textcolor{secondary}{\timeperiod[Mar 2020]{Dec 2019}}
     \end{itemize}
-  \end{itemize}
-\end{sectiondescription}
-
-\rolesubsubsection
-  {Software engineer}
-  {\timeperiod{Sep 2019}}
-
-\begin{sectiondescription}
-  \begin{itemize}[nosep, leftmargin = *]
-    \item Contributed heavily in Vocabulary's transition to Bulma.
-    \item Collaborated in decision-making with design \& dev teams.
-    \item Identified \& executed major upgrades in the core tech.
   \end{itemize}
 \end{sectiondescription}
 
