--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -70,7 +70,7 @@
     \item Developed extension capability with plug-and-play apps.
     \item Developed latest features such as HTTP/2 and WebSockets.
     \item Added OAuth2 provider functionality for 3rd-party auth.
-    \item Launched as a mobile responsive progressive web app.
+    \item Launched as a mobile responsive, progressive web app.
     \item Composed the Django backend, all core apps and services.
     \item Integrated with the React frontend and deployed on Docker.
   \end{itemize}
@@ -82,7 +82,7 @@
 
 \begin{sectiondescription}
   \begin{itemize}[nosep, leftmargin = *]
-    \item Penned the philosophy and ideals of the project.
+    \item Documented the design choices \& underlying philosophy.
     \item Documented the architecture, frontend and backend.
     \item Wrote helpful tutorials, how-to guides and FAQ.
     \item Wrote in-depth reference material for functions and utils.
