--- a/sections/education.tex
+++ b/sections/education.tex
@@ -2,10 +2,12 @@
 \resumesection{Education}{\iconGraduationHat}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\vspace{-2mm}
 \timedsubsection
   {\href{https://www.iitr.ac.in/}{IIT Roorkee}}
   {Graduated 2019}
 
+\vspace{-1mm}
 \begin{sectiondescription}
   Bachelor of Technology (B. Tech.) \hfill Engineering Physics~\iconAtom\\% Line break needed to align icon to right edge
 \end{sectiondescription}
